--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "casl": "^0.3.4",
+    "@casl/ability": "^2.0.0-alpha.ade5be4a",
+    "@casl/mongoose": "2.0.0-alpha.ade5be4a",
     "express": "^4.15.3",
     "http-errors": "^1.6.1",
     "jsonwebtoken": "^7.4.1",
