--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@casl/ability": "^3.0.1",
     "@casl/mongoose": "^2.0.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-async-errors": "^3.1.1",
     "http-errors": "^1.6.1",
